--- a/src/app/shared/nav-bar/nav-bar.component.html
+++ b/src/app/shared/nav-bar/nav-bar.component.html
@@ -1,1 +1,9 @@
-<p>nav-bar works!</p>
+<nav class="nav-bar">
+    <mat-toolbar>
+        <button mat-button>Home</button>
+        <button mat-button>About Us</button>
+        <button mat-button>Gallery</button>
+        <button mat-button>Contact</button>
+    </mat-toolbar>
+</nav>
+
