add style to nav bar

--- a/src/app/shared/nav-bar/nav-bar.component.html
+++ b/src/app/shared/nav-bar/nav-bar.component.html
@@ -1,9 +1,6 @@
-<nav class="nav-bar">
-    <mat-toolbar>
-        <button mat-button>Home</button>
-        <button mat-button>About Us</button>
-        <button mat-button>Gallery</button>
-        <button mat-button>Contact</button>
-    </mat-toolbar>
-</nav>
-
+<mat-toolbar class="nav-bar">
+  <button class="nav-bar-item" mat-button>Home</button>
+  <button class="nav-bar-item" mat-button>About Us</button>
+  <button class="nav-bar-item" mat-button>Gallery</button>
+  <button class="nav-bar-item" mat-button>Contact</button>
+</mat-toolbar>
