--- a/src/app/shared/nav-bar/nav-bar.component.html
+++ b/src/app/shared/nav-bar/nav-bar.component.html
@@ -1,6 +1,9 @@
 <mat-toolbar class="nav-bar">
-  <button class="nav-bar-item" mat-button>Home</button>
-  <button class="nav-bar-item" mat-button>About Us</button>
-  <button class="nav-bar-item" mat-button>Gallery</button>
-  <button class="nav-bar-item" mat-button>Contact</button>
+  <img class="logo" src="../../../assets/Logo.png" alt="Hoshi Tattos Logo" />
+  <div class="nav-bar-items-container">
+    <button class="nav-bar-item" mat-button>Home</button>
+    <button class="nav-bar-item" mat-button>About Us</button>
+    <button class="nav-bar-item" mat-button>Gallery</button>
+    <button class="nav-bar-item" mat-button>Contact</button>
+  </div>
 </mat-toolbar>
