--- a/src/app/shared/nav-bar/nav-bar.component.scss
+++ b/src/app/shared/nav-bar/nav-bar.component.scss
@@ -1,22 +1,30 @@
 .nav-bar {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+    height: fit-content;
     gap: 10px;
 
-    .nav-bar-item {
-        font-size: larger;
-        font-weight: 600;
-        background-color: #fff;
-        border: none;
-        border-radius: 10px;
-        cursor: pointer;
-        padding: 5px;
-        transition: transform 0.3s ease, background-color 0.3s ease-in-out;
-        
-        &:hover, &:active {
-            background-color: #7B66FB;
-            color: #fff;
+    .logo {
+        width: 100px;
+    }
+
+    .nav-bar-items-container {
+        .nav-bar-item {
+            font-size: larger;
+            font-weight: 600;
+            background-color: #fff;
+            border: none;
+            border-radius: 10px;
+            cursor: pointer;
+            padding: 5px;
+            margin: 5px;
+            transition: transform 0.3s ease, background-color 0.3s ease-in-out;
+            
+            &:hover, &:active {
+                background-color: #7B66FB;
+                color: #fff;
+            }
         }
     }
 }
