create hero section

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,15 @@
-
+<section class="hero-section">
+  <div class="content">
+    <h1>Hoshi Tattoos</h1>
+    <p>
+      Welcome to Hoshi Tattoos, where we transform your skin into a canvas for
+      breathtaking art. Explore our collection of custom designs and let our
+      skilled artists bring your vision to life.
+    </p>
+    <div class="buttons">
+      <button class="btn btn-primary">Book an Appointment</button>
+      <button class="btn btn-secondary">Learn More</button>
+    </div>
+  </div>
+  <img src="../../../assets/Home_Hero.jpg" alt="Tattoo Shop" />
+</section>
